Use DEVELOPER_DIR instead of XCODE_PATH
This is necessary for xed to produce correct Xcode version in footer

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Generate Data Sources
         run: bundle exec rake data
         env:
-          XCODE_PATH: /Applications/Xcode_11.4.app
+          DEVELOPER_DIR: /Applications/Xcode_11.4.app/Contents/Developer
 
       - name: Build Site
         run: JEKYLL_ENV=production bundle exec jekyll build
