--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ github_username: NSHipster
 
 markdown: kramdown
 
-include: [".well-known"]
+include:
+  - ".well-known"
+  - CNAME
 
 exclude:
   - README*
