Force copy of site assets after rsync

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Sync Site Contents
         run: |
           rsync -avzr --delete --exclude='.git/' --exclude='Site' Site/ .
+          cp -r Site/assets .
           rm -rf Site/
 
       - name: Commit & Push Changes
