--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
   build:
     runs-on: macos-latest
 
+    name: "Build"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -50,6 +52,8 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: macos-latest
+
+    name: "Deploy to GitHub Pages"
 
     steps:
       - name: Checkout
